Fixed map scroller alignment for static maps Added tablet support for static maps

--- a/app/modules/map/css/compliant-bbplus.css
+++ b/app/modules/map/css/compliant-bbplus.css
@@ -6,7 +6,7 @@
 	overflow: hidden;
 }
 
-#mapimage {
+#staticmapimage {
 	width: 410px;
 	height: 260px;
 	border: 1px solid #999;
